[package]
name = "pusd-spl"
version = "0.1.0"
description = "PUSD Stablecoin - SPL Token-2022 Program"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/ruhulamin1398/pusd-spl"
homepage = "https://github.com/ruhulamin1398/pusd-spl"
license = "MIT"
keywords = ["solana", "stablecoin", "spl-token", "token-2022"]

[lib]
crate-type = ["cdylib", "lib"]
name = "pusd_spl"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
